--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,15 @@
 
 /* Color Palette */
 
-
+.class-1{
+color: aqua;
+}
+.class-1{
+background: #000;
+}
+.class-1{
+color: aqua;
+}
 /* Textures or Patterns*/
 
 
